--- a/src/components/FilmListItem/FilmListItem.css
+++ b/src/components/FilmListItem/FilmListItem.css
@@ -7,3 +7,11 @@
   display: flex;
   flex-wrap: wrap;
 }
+.list-item__date {
+  margin: 0px;
+  color: gray;
+}
+.list-item__title {
+  margin-bottom: 5px;
+  line-height: normal;
+}
