--- a/src/components/FilmList/FilmList.css
+++ b/src/components/FilmList/FilmList.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 50px;
+  gap: 20px;
+  padding: 0;
 }
 
 .film-list__search {
