--- a/src/components/FilmListItem/FilmListItem.css
+++ b/src/components/FilmListItem/FilmListItem.css
@@ -15,3 +15,17 @@
   margin-bottom: 5px;
   line-height: normal;
 }
+
+.list-item__info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.list-item__rating {
+  width: 20px;
+  height: 20px;
+  padding: 2px 2px 2px 3px;
+  margin: 10px;
+  border: 2px solid;
+  border-radius: 50%;
+}
