убрал папку жанров

--- a/src/components/FilmListItem/FilmListItem.css
+++ b/src/components/FilmListItem/FilmListItem.css
@@ -3,10 +3,19 @@
   border-radius: 10px;
   border-color: white;
 }
-.list-item__genres {
+.list-item__genres-wrapper {
   display: flex;
   flex-wrap: wrap;
 }
+
+.list-item__genre {
+  color: grey;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  margin: 2px;
+  padding: 2px;
+}
+
 .list-item__date {
   margin: 0px;
   color: gray;
